--- a/source/app/footer/footer.html
+++ b/source/app/footer/footer.html
@@ -14,8 +14,8 @@
     </ul>
     <ul class="Footer-List about">
       <a class="Footer-item Footer-item-Bold conocenos">DOCUMENTACION</a><br>
-      <a href="#/portafolio" class="MainMenu-Link Link1">Portafolio de servicios</a><br>
-      <a href="#/usuariosList" class="MainMenu-Link">Politica de privacidad</a><br>
-      <a href="#/ambiental" class="MainMenu-Link">Punto ambiental</a><br><br><br>
+      <a href="#/portafolio" class="MainMenu-footer">Portafolio de servicios</a><br>
+      <a href="#/usuariosList" class="MainMenu-footer">Politica de privacidad</a><br>
+      <a href="#/ambiental" class="MainMenu-footer">Punto ambiental</a><br><br><br>
     </ul>
   </footer>
