--- a/source/app/inicio/inicio.html
+++ b/source/app/inicio/inicio.html
@@ -9,8 +9,8 @@
      </div>
  </div>
  <div class="altWrap">
-   <aside class="" style="display: inline-block;float: right;margin-top: 5em;width: 5em;margin-right: 15em;border-radius: 18em;">
-     <img src="../../img/messenger.jpg" alt="" style="border-radius:5em;"/>
+   <aside class="heal">
+     <img class="care1" src="../../img/angelica.jpg" alt="" />
    </aside>
  		<div class="container" style="display: inline-block; margin-left: 5em;">
  			<div class="row">
@@ -93,7 +93,7 @@
               <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Diego Valencia</h3>
-             <p class="Description">Aguatero noob</p>
+             <p class="Description">Base de datos</p>
            </div>
            <div class="col-md-2">
              <div class="Equipoimage-container">
@@ -107,7 +107,7 @@
                <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Felipe Andrade</h3>
-             <p class="Description">Tintos</p>
+             <p class="Description">Base de datos</p>
            </div>
          </div>
        </div>
