--- a/source/app/registro/registro.html
+++ b/source/app/registro/registro.html
@@ -18,7 +18,7 @@
                      md-item-text="item.titulos"
                      md-min-length="1"
                      md-floating-label="Titulos"
-                    required name="titulos"
+                     name="titulos"
                     style="margin:0;">
       <md-item-template style="margin:0;">
         <span
