--- a/source/app/Usuarios/consultasList/consultasList.html
+++ b/source/app/Usuarios/consultasList/consultasList.html
@@ -10,7 +10,7 @@
       </thead>
       <tbody ng-repeat="consulta in vm.consultas" style="">
         <!-- <tr><th> scope="row"</th>1</tr> -->
-        <td scope="row"><font>{{consulta.Medico}}<font></font></font></td>
+        <td scope="row"><font>{{consulta.medico.nombres}}<font></font></font></td>
         <td scope="row"><font>{{consulta.fechaCon}}<font></font></font></td>
         <td scope="row"><font>{{consulta.descripcion}}<font></font></font></td>
         <!-- <td scope="row"><font><font><a href="">Ver más</a></font></font></td>-->
