ya se realizaron las paginas para que el usuario pueda recuperar su contraseña

--- a/source/app/Usuarios/usuariosList/usuariosList.html
+++ b/source/app/Usuarios/usuariosList/usuariosList.html
@@ -15,9 +15,9 @@
 
 <section class="SectionTab">
   <div class="tabla" data-example-id="simple-table">
-    <h1 style="padding-bottom:.5em;border-bottom:2px solid black;">Medicos</h1><br>
+    <h1 style="padding-bottom:.5em;border-bottom:2px solid #64b5f6; color:#64b5f6;">Medicos</h1><br>
     <table class="table">
-      <thead style="background:white;">
+      <thead style="background:#eee;">
         <!-- <tr><th>Foto</th><th>Nombre</th><th>Apellidos</th></tr> -->
         <th><font><font>Foto</font></th>
         <th><font><font>Nombre</font></th>
