--- a/source/index.html
+++ b/source/index.html
@@ -19,16 +19,18 @@
     <link rel="stylesheet" href="/app/footer/footer.css">
     <link rel="stylesheet" href="/app/header/estilos.css">
     <link rel="stylesheet" href="/app/header/header.css">
-    <link rel="stylesheet" href="/app/login/estilos.css">
     <link rel="stylesheet" href="/app/inicio/inicio.css">
+    <link rel="stylesheet" href="/app/login/estilos.css">
     <link rel="stylesheet" href="/app/perfil/perfil.css">
-    <link rel="stylesheet" href="/app/registro/estilos.css">
     <link rel="stylesheet" href="/app/portafolio/portafolio.css">
+    <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
+    <link rel="stylesheet" href="/app/registro/estilos.css">
+    <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasList/estilos.css">
-    <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
     <link rel="stylesheet" href="/app/Usuarios/eliminarcuenta/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/usuariosList/estilos.css">
+    <link rel="stylesheet" href="/app/recuperarcontraseña/nuevacontraseña/nuevacontraseña.css">
     <!-- endinject -->
     <!-- endbuild -->
 </head>
@@ -91,29 +93,37 @@
     <script src="/app/header/app.module.js"></script>
     <script src="/app/header/app.router.js"></script>
     <script src="/app/header/showpanels.js"></script>
-    <script src="/app/login/app.controller.js"></script>
-    <script src="/app/login/app.directive.js"></script>
-    <script src="/app/login/app.module.js"></script>
-    <script src="/app/login/app.router.js"></script>
     <script src="/app/inicio/app.controller.js"></script>
     <script src="/app/inicio/app.directivas.js"></script>
     <script src="/app/inicio/app.module.js"></script>
     <script src="/app/inicio/app.route.js"></script>
+    <script src="/app/login/app.controller.js"></script>
+    <script src="/app/login/app.directive.js"></script>
+    <script src="/app/login/app.module.js"></script>
+    <script src="/app/login/app.router.js"></script>
     <script src="/app/perfil/app.controller.js"></script>
     <script src="/app/perfil/app.directive.js"></script>
     <script src="/app/perfil/app.module.js"></script>
     <script src="/app/perfil/app.route.js"></script>
+    <script src="/app/portafolio/app.directivas.js"></script>
+    <script src="/app/portafolio/app.module.js"></script>
+    <script src="/app/portafolio/app.route.js"></script>
+    <script src="/app/portafolio/despliege.js"></script>
+    <script src="/app/recuperarcontraseña/app.directivas.js"></script>
+    <script src="/app/recuperarcontraseña/app.module.js"></script>
+    <script src="/app/recuperarcontraseña/app.router.js"></script>
     <script src="/app/registro/app.controller.js"></script>
     <script src="/app/registro/app.directivas.js"></script>
     <script src="/app/registro/app.module.js"></script>
     <script src="/app/registro/app.route.js"></script>
     <script src="/app/registro/app.services.js"></script>
-    <script src="/app/portafolio/app.directivas.js"></script>
-    <script src="/app/portafolio/app.module.js"></script>
-    <script src="/app/portafolio/app.route.js"></script>
-    <script src="/app/portafolio/despliege.js"></script>
     <script src="/app/tituloscertificados/app.module.js"></script>
     <script src="/app/tituloscertificados/app.services.js"></script>
+    <script src="/app/Usuarios/consulta/app.controller.js"></script>
+    <script src="/app/Usuarios/consulta/app.directive.js"></script>
+    <script src="/app/Usuarios/consulta/app.module.js"></script>
+    <script src="/app/Usuarios/consulta/app.route.js"></script>
+    <script src="/app/Usuarios/consulta/app.services.js"></script>
     <script src="/app/Usuarios/consultasCreate/app.controller.js"></script>
     <script src="/app/Usuarios/consultasCreate/app.directive.js"></script>
     <script src="/app/Usuarios/consultasCreate/app.module.js"></script>
@@ -123,11 +133,6 @@
     <script src="/app/Usuarios/consultasList/app.module.js"></script>
     <script src="/app/Usuarios/consultasList/app.route.js"></script>
     <script src="/app/Usuarios/consultasList/app.services.js"></script>
-    <script src="/app/Usuarios/consulta/app.controller.js"></script>
-    <script src="/app/Usuarios/consulta/app.directive.js"></script>
-    <script src="/app/Usuarios/consulta/app.module.js"></script>
-    <script src="/app/Usuarios/consulta/app.route.js"></script>
-    <script src="/app/Usuarios/consulta/app.services.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.controller.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.directive.js"></script>
     <script src="/app/Usuarios/eliminarcuenta/app.module.js"></script>
@@ -137,6 +142,9 @@
     <script src="/app/Usuarios/usuariosList/app.module.js"></script>
     <script src="/app/Usuarios/usuariosList/app.route.js"></script>
     <script src="/app/Usuarios/usuariosList/app.services.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.directivas.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.module.js"></script>
+    <script src="/app/recuperarcontraseña/nuevacontraseña/app.router.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 </body>
