se empezo el modulo de citas medicas

--- a/source/app/footer/footer.html
+++ b/source/app/footer/footer.html
@@ -15,7 +15,7 @@
     <ul class="Footer-List about">
       <a class="Footer-item Footer-item-Bold conocenos">DOCUMENTACION</a><br>
       <a href="#/portafolio" class="MainMenu-footer">Portafolio de servicios</a><br>
-      <a href="#/usuariosList" class="MainMenu-footer">Politica de privacidad</a><br>
+      <a href="#/citamedica" class="MainMenu-footer">Politica de privacidad</a><br>
       <a href="#/ambiental" class="MainMenu-footer">Punto ambiental</a><br><br><br>
     </ul>
   </footer>
