--- a/source/index.html
+++ b/source/index.html
@@ -109,6 +109,7 @@
     <script src="/app/portafolio/app.module.js"></script>
     <script src="/app/portafolio/app.route.js"></script>
     <script src="/app/portafolio/despliege.js"></script>
+    <script src="/app/recuperarcontraseña/app.controller.js"></script>
     <script src="/app/recuperarcontraseña/app.directivas.js"></script>
     <script src="/app/recuperarcontraseña/app.module.js"></script>
     <script src="/app/recuperarcontraseña/app.router.js"></script>
@@ -119,6 +120,11 @@
     <script src="/app/registro/app.services.js"></script>
     <script src="/app/tituloscertificados/app.module.js"></script>
     <script src="/app/tituloscertificados/app.services.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.controller.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.directive.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.module.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.route.js"></script>
+    <script src="/app/Usuarios/citasmedicas/app.service.js"></script>
     <script src="/app/Usuarios/consulta/app.controller.js"></script>
     <script src="/app/Usuarios/consulta/app.directive.js"></script>
     <script src="/app/Usuarios/consulta/app.module.js"></script>
