--- a/source/app/inicio/inicio.html
+++ b/source/app/inicio/inicio.html
@@ -69,42 +69,42 @@
          <div class="row">
            <div class="col-md-2">
              <div class="Equipoimage-container">
-               <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
+               <img class="picture" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Emerson Caicedo</h3>
              <p class="Description">Programador</p>
            </div>
            <div class="col-md-2">
              <div class="Equipoimage-container">
-              <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
+              <img class="picture" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Kevin Morales</h3>
              <p class="Description">Diseñador</p>
            </div>
            <div class="col-md-2">
              <div class="Equipoimage-container">
-              <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
+              <img class="picture" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Steven Vargas</h3>
              <p class="Description">Programador</p>
            </div>
            <div class="col-md-2">
              <div class="Equipoimage-container">
-              <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
+              <img class="picture" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Diego Valencia</h3>
              <p class="Description">Base de datos</p>
            </div>
            <div class="col-md-2">
              <div class="Equipoimage-container">
-               <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
+               <img class="picture" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Nataly Escobar</h3>
              <p class="Description">Diseñadora</p>
            </div>
            <div class="col-md-2">
              <div class="Equipoimage-container">
-               <img class="emernoob" src="../../img/messenger.jpg" alt="" width="100" />
+               <img class="picture" src="../../img/messenger.jpg" alt="" width="100" />
              </div>
              <h3 class="Name">Felipe Andrade</h3>
              <p class="Description">Base de datos</p>
