--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="/app/admin/admin.css">
     <link rel="stylesheet" href="/app/ambiental/ambiental.css">
+    <link rel="stylesheet" href="/app/bienvenido/estilos.css">
     <link rel="stylesheet" href="/app/configuracion/configuracion.css">
     <link rel="stylesheet" href="/app/footer/footer.css">
     <link rel="stylesheet" href="/app/header/estilos.css">
@@ -22,8 +23,8 @@
     <link rel="stylesheet" href="/app/inicio/inicio.css">
     <link rel="stylesheet" href="/app/login/estilos.css">
     <link rel="stylesheet" href="/app/perfil/perfil.css">
-    <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/recuperarcontraseña/recuperarcontraseña.css">
+    <link rel="stylesheet" href="/app/portafolio/portafolio.css">
     <link rel="stylesheet" href="/app/registro/estilos.css">
     <link rel="stylesheet" href="/app/Usuarios/consulta/consulta.css">
     <link rel="stylesheet" href="/app/Usuarios/consultasCreate/estilos.css">
@@ -82,10 +83,15 @@
     <script src="/app/ambiental/app.directivas.js"></script>
     <script src="/app/ambiental/app.module.js"></script>
     <script src="/app/ambiental/app.route.js"></script>
+    <script src="/app/bienvenido/app.directive.js"></script>
+    <script src="/app/bienvenido/app.module.js"></script>
+    <script src="/app/bienvenido/app.route.js"></script>
     <script src="/app/config/app.constantes.js"></script>
     <script src="/app/configuracion/app.directive.js"></script>
     <script src="/app/configuracion/app.module.js"></script>
     <script src="/app/configuracion/app.route.js"></script>
+    <script src="/app/email/app.module.js"></script>
+    <script src="/app/email/app.services.js"></script>
     <script src="/app/footer/app.directivas.js"></script>
     <script src="/app/footer/app.module.js"></script>
     <script src="/app/header/app.controller.js"></script>
@@ -105,13 +111,14 @@
     <script src="/app/perfil/app.directive.js"></script>
     <script src="/app/perfil/app.module.js"></script>
     <script src="/app/perfil/app.route.js"></script>
+    <script src="/app/recuperarcontraseña/app.controller.js"></script>
+    <script src="/app/recuperarcontraseña/app.directivas.js"></script>
+    <script src="/app/recuperarcontraseña/app.module.js"></script>
+    <script src="/app/recuperarcontraseña/app.router.js"></script>
     <script src="/app/portafolio/app.directivas.js"></script>
     <script src="/app/portafolio/app.module.js"></script>
     <script src="/app/portafolio/app.route.js"></script>
     <script src="/app/portafolio/despliege.js"></script>
-    <script src="/app/recuperarcontraseña/app.directivas.js"></script>
-    <script src="/app/recuperarcontraseña/app.module.js"></script>
-    <script src="/app/recuperarcontraseña/app.router.js"></script>
     <script src="/app/registro/app.controller.js"></script>
     <script src="/app/registro/app.directivas.js"></script>
     <script src="/app/registro/app.module.js"></script>
