--- a/source/app/perfil/perfil.html
+++ b/source/app/perfil/perfil.html
@@ -1,4 +1,4 @@
-<!-- <section class="SectionPerfil">
+<section class="SectionPerfil">
   <article class="FormPerfil" style="display:block;">
 
       <h1 class="textPer"> Bienvenido   </h1>
@@ -52,9 +52,9 @@
 
   </form>
   </article>
-</section> -->
+</section>
 
-<section class="Profile-container">
+<!-- <section class="Profile-container">
   <form class="ProfileForm">
     <div class="HeaderForm">
       <h1 class="text-center Profile-title">Bienvenido</h1>
@@ -105,4 +105,4 @@
   </div>
 
   </form>
-</section>
+</section> -->
